// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CustomizeView > should render > with services 1`] = `
<DocumentFragment>
  <div
    class="react-cookienotice-body"
  >
    <div
      class="react-cookienotice-title"
    >
      <span>
        customizeTitleLabel
      </span>
    </div>
    <ul
      class="react-cookienotice-services"
    >
      <li
        class="react-cookienotice-service"
      >
        <div
          class="react-cookienotice-service-checkbox"
        >
          <input
            id="service1Code"
            name="service1Code"
            type="checkbox"
          />
          <label
            for="service1Code"
          >
            service1Code
          </label>
        </div>
        <div
          class="react-cookienotice-service-info"
        >
          <span
            class="react-cookienotice-service-info-name"
          >
            service1Name
          </span>
          <span
            class="react-cookienotice-service-info-description"
          >
            service1Description
          </span>
        </div>
      </li>
      <li
        class="react-cookienotice-service"
      >
        <div
          class="react-cookienotice-service-checkbox"
        >
          <input
            id="service2Code"
            name="service2Code"
            type="checkbox"
          />
          <label
            for="service2Code"
          >
            service2Code
          </label>
        </div>
        <div
          class="react-cookienotice-service-info"
        >
          <span
            class="react-cookienotice-service-info-name"
          >
            service2Name
          </span>
          <span
            class="react-cookienotice-service-info-description"
          >
            service2Description
          </span>
        </div>
      </li>
    </ul>
  </div>
  <div
    class="react-cookienotice-buttons"
  >
    <button
      class="react-cookienotice-button"
    >
      acceptButtonLabel
    </button>
    <button
      class="react-cookienotice-button"
    >
      backButtonLabel
    </button>
  </div>
</DocumentFragment>
`;

exports[`CustomizeView > should render > with services empty 1`] = `
<DocumentFragment>
  <div
    class="react-cookienotice-body"
  >
    <div
      class="react-cookienotice-title"
    >
      <span>
        customizeTitleLabel
      </span>
    </div>
    <ul
      class="react-cookienotice-services"
    />
  </div>
  <div
    class="react-cookienotice-buttons"
  >
    <button
      class="react-cookienotice-button"
    >
      acceptButtonLabel
    </button>
    <button
      class="react-cookienotice-button"
    >
      backButtonLabel
    </button>
  </div>
</DocumentFragment>
`;
